# alpha-counter-cli

./: CHANGELOG.md  Cargo.toml  Makefile.md  Makefile.toml  README.md  README.template.md
src/: main.rs
t/: README.md
