[package]
name = "alpha-counter-cli"
version = "0.3.1"
edition = "2024"
description = "Alphabetic counter"
license = "MIT"
repository = "https://github.com/qtfkwk/alpha-counter-cli"

[dependencies]
alpha-counter = "0.3.0"
clap = { version = "4.5.50", features = ["derive"] }

[[bin]]
name = "alpha-counter"
path = "src/main.rs"
